--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ include_once('navbar.html');
 <!-- <section class="map">
     <iframe height="100%" width="100%" src="https://embed.windy.com/embed2.html?lat=15.327&lon=72.905&detailLat=19.083&detailLon=72.905&width=650&height=450&zoom=5&level=surface&overlay=cosc&product=geos5&menu=&message=true&marker=true&calendar=now&pressure=true&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1" frameborder="0"></iframe>
 </section> -->
-<div style="overflow: hidden;position: relative; height:200px;"  >
-    <iframe class="" rel="nofollow" style="height: 800px; width:1400px; transform: scale(0.294167) !important; transform-origin: 0px 0px;" frameborder="0" scrolling="no" 
+<div style="overflow: hidden;position: absolute;top:-32px;left:0px; height:630px; width:100%"  >
+    <iframe class="" rel="nofollow" style="height: 630px; width:100%; transform: scale(1) !important; transform-origin: 0px 0px;" frameborder="0" scrolling="no" 
     src="https://embed.windy.com/embed2.html?lat=15.327&lon=72.905&detailLat=19.083&detailLon=72.905&width=650&height=450&zoom=5&level=surface&overlay=cosc&product=geos5&menu=&message=true&marker=true&calendar=now&pressure=true&type=map&location=coordinates&detail=&metricWind=default&metricTemp=default&radarRange=-1"></iframe></div>
 </body>
     </html>
