--- a/home.html
+++ b/home.html
@@ -32,7 +32,8 @@
   <body>
     <nav class=" navbar navbar-expand-lg bg-dark">
       <a class="navbar-brand" href="#"
-        ><img style="height: 60px" src="../images/logo1.png" alt=""
+        ><img style="height: 60px" src="./images/logo1.png" alt=""
+      /><img style="height: 60px" src="./images/Ctrl+s (1).png" alt=""
       /></a>
       <button
         class="navbar-toggler"
@@ -48,15 +49,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-          <a class="nav-link" href="#"
-            >Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="./home.html">Home </a>
           
+        
           <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="./map.html">Maps</a>
 
-          <a class="nav-link" href="articles.html">Article</a>
-          <a class="nav-link" href="#">Solution</a>
+          <a class="nav-link" href="articles.html">Articles</a>
+          <a class="nav-link" href="./facts.html">Facts</a>
           <!-- <a class="nav-link" href="#">Test Youerself</a> -->
-          <a class="nav-link" href="#">Your Views</a>
+          <a class="nav-link" href="./your_views.php">Your Views</a>
 
         </div>
       </div>
@@ -82,7 +84,7 @@
     <div class="card-container">
       <h3> <br> <br>Climate Change</h3> 
       <br>
-      <p>Global temperatures and sea levels are rising, and possibly contributing to larger more devastating storms. This can all be contributed to climate change. Climate...</p>
+      <p> <i>“Climate change is real. It is happening right now, it is the most urgent threat facing our entire species and we need to work collectively together and stop procrastinating.”</i></p>
         <a href="map.html"><button class="btn-maps">
         Explore
     </button></a>
