--- a/map.html
+++ b/map.html
@@ -55,7 +55,7 @@
           <a class="nav-link" href="./home.html#about">About</a>
           <a class="nav-link active" href="./map.html">Maps</a>
 
-          <a class="nav-link" href="./articles.html">Article</a>
+          <a class="nav-link" href="./articles.html">Articles</a>
           <a class="nav-link" href="./facts.html">Facts</a>
           <a class="nav-link" href="./your_views.php">Your Views</a>
 
