--- a/articles.html
+++ b/articles.html
@@ -54,7 +54,7 @@
             <a class="nav-link active" href="./articles.html">Articles</a>
             <a class="nav-link" href="./facts.html">Facts</a>
             
-            <a class="nav-link" href="./your_views.php">Your views</a>
+            <a class="nav-link" href="./your_views.php">Your Views</a>
   
           </div>
         </div>
