--- a/home.html
+++ b/home.html
@@ -85,7 +85,7 @@
       <h3> <br> <br>Climate Change</h3> 
       <br>
       <p> <i>“Climate change is real. It is happening right now, it is the most urgent threat facing our entire species and we need to work collectively together and stop procrastinating.”</i></p>
-        <a href="map.html"><button class="btn-maps">
+        <a href="#about"><button class="btn-maps">
         Explore
     </button></a>
     <a href="map.html"><button class="btn-maps">
